// Copyright 2022 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package infra.appengine.poros.taskspb;

option go_package = "infra/appengine/poros/taskspb";

message AssetAdditionOrDeletionTask {
  string asset_instance_id = 1;
  string operation = 2;
}
